overlapping fixed

--- a/google-fit/src/components/AiRoll/AiRoll.scss
+++ b/google-fit/src/components/AiRoll/AiRoll.scss
@@ -15,7 +15,10 @@
     margin-bottom: 2rem;
   }
   @include marginLR();
-
+  &__title {
+    font-size: 2.4rem;
+    font-weight: 400;
+  }
   &__bubbles {
     width: 5rem;
     float: left;
@@ -81,6 +84,7 @@
       }
     }
   }
+
   &__question {
     width: calc(0.95 * 100%);
     &--position {
