--- a/google-fit/src/components/Benefits/Benefits.scss
+++ b/google-fit/src/components/Benefits/Benefits.scss
@@ -11,7 +11,7 @@
       flex-direction: row;
     }
     &__description {
-      width: 90vw;
+      width: 80vw;
       @include tablet {
         width: 30rem;
         margin-left: 3rem;
