--- a/google-fit/src/components/Carousel/Carousel.scss
+++ b/google-fit/src/components/Carousel/Carousel.scss
@@ -21,7 +21,7 @@
       width: 100%;
 
       @include tablet {
-        width: 6rem;
+        width: 7.2rem;
       }
       @include desktop {
         width: 12rem;
