--- a/google-fit/src/components/Footer/Footer.scss
+++ b/google-fit/src/components/Footer/Footer.scss
@@ -2,7 +2,6 @@
 @use "../../styles/partials/mixins" as *;
 
 .footer-section {
-  border-top: 1px dashed gray; //this is temporary for visibility of next component; this should be removed when finalizing the whole design
   font-size: 1.1rem;
   font-weight: 500;
   justify-content: center;
