--- a/google-fit/src/components/Hero/Hero.scss
+++ b/google-fit/src/components/Hero/Hero.scss
@@ -70,9 +70,13 @@
     &__right {
       @extend .hero-text;
       color: white;
-      width: 14rem;
+      width: 3rem;
       left: 68%;
       top: 32rem;
+      @include tablet {
+        width: 14rem;
+      }
+
       text-align: right;
       &--hide {
         display: none;
