--- a/google-fit/src/components/StartTheJourney/StartTheJourney.scss
+++ b/google-fit/src/components/StartTheJourney/StartTheJourney.scss
@@ -1,61 +1,65 @@
 @use "../../styles/partials/fonts" as *;
 @use "../../styles/partials/mixins" as *;
-.hero-journey {
-  background-image: url("../../assets/startTheJourney/iPhone 15 Pro Portrait Mockup.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  height: 20rem;
-
-  margin-left: 2rem;
-  margin-right: 2rem;
+.journey {
   display: flex;
   justify-content: center;
-  flex-direction: column;
+
+  margin-bottom: 2rem;
+  // height: 100vh;
+  flex-direction: row;
+  position: relative;
   @include tablet {
-    margin: 6rem 4.5rem 6rem 4.5rem;
-    background-position: center;
+    margin-bottom: 5rem;
   }
   @include desktop {
-    margin-left: 8.5rem;
-    margin-right: 8.5rem;
     flex-direction: row;
     height: 30rem;
+    margin-bottom: 10rem;
+  }
+  &__phone {
+    height: 30rem;
+    order: 1;
+  }
+  &__phone-container {
+    width: fit-content;
   }
   &__title {
-    position: relative;
-    width: 10rem;
-    left: 10rem;
-    display: inline;
-    @include sectionHeader();
-    font-size: 1rem;
-    bottom: 2rem;
+    //  @include sectionHeader();
+    font-size: 2rem;
+    font-weight: 400;
     @include tablet {
-      left: 25rem;
+      position: relative;
+      left: 15rem;
+      top: 16rem;
       @include bodyText();
       font-weight: 100;
     }
     @include desktop {
-      left: 20rem;
-      top: 5rem;
+      top: 18rem;
+      left: 15rem;
+
       font-weight: 400;
       font-size: 1.5rem;
-      width: 20rem;
     }
   }
   &__bubbles {
-    float: right;
-    position: absolute;
-    width: 3rem;
+    width: 5rem;
+    height: fit-content;
 
-    left: 21.5rem;
+    order: 2;
+    position: absolute;
+    float: right;
+    left: 18.2rem;
     @include tablet {
-      left: 43rem;
+      left: 40rem;
       width: 7rem;
+      top: 15rem;
     }
     @include desktop {
-      left: 71.5rem;
+      left: 68.8rem;
+      top: 18rem;
       width: 10rem;
-      transform: rotate(30deg);
+      // transform: rotate(30deg);
     }
   }
 }
