--- a/google-fit/src/components/Testimonials/Testimonials.scss
+++ b/google-fit/src/components/Testimonials/Testimonials.scss
@@ -13,9 +13,11 @@
   &__text-container {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
   }
   &__title {
-    @include sectionHeader();
+    font-size: 2rem;
+    font-weight: 400;
   }
   &__content {
     @include bodyText();
