--- a/google-fit/src/pages/Main/Main.scss
+++ b/google-fit/src/pages/Main/Main.scss
@@ -2,4 +2,6 @@
 
 .main {
   font-family: $font-regular;
+  margin: 0%;
+  padding: 0%;
 }
